// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom actions 1`] = `
<div
  class="overlay s-VtBGqL4DHYk2"
>
  <span
    class="s-VtBGqL4DHYk2"
  >
    <svg
      height="185"
      viewBox="0 0 180.17 208.04"
      width="160"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <style>
          .cls-3{fill:#bb464b}
        </style>
      </defs>
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          data-name="Page Elements"
          id="Page_Elements"
        >
          <path
            d="M90.09 0 0 52v104l90.09 52 90.08-52V52Z"
            style="fill:#fff"
          />
          <path
            d="m180.17 52.01-28.2-16.28-27.12 15.66 28.2 16.28 27.12-15.66zM27.12 67.67l90.09-52.01L90.08 0 0 52.01l27.12 15.66zm34.77 52.63 28.19 16.28 28.2-16.28-28.2-16.28-28.19 16.28z"
            style="fill:#e0684b"
          />
          <path
            class="cls-3"
            d="M153.05 67.67v72.7l-62.97 36.35-62.96-36.35v-72.7L0 52.01v104.02l90.08 52.01 90.09-52.01V52.01l-27.12 15.66z"
          />
          <path
            class="cls-3"
            d="M90.08 71.46 61.89 87.74v32.56l28.19-16.28 28.2 16.28V87.74l-28.2-16.28z"
          />
          <path
            d="m153.05 67.67-34.77 20.07v32.56l-28.2 16.28v40.14l62.97-36.35v-72.7z"
            style="fill:#e0ded8"
          />
          <path
            d="m27.12 67.67 34.77 20.07v32.56l28.19 16.28v40.14l-62.96-36.35v-72.7z"
            style="fill:#d5d2ca"
          />
        </g>
      </g>
    </svg>
     
    <svg
      height="300"
      viewBox="0 0 392 392"
      width="300"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          id="Spinner"
        >
          <path
            d="M40.21 126.43c3.7-7.31 7.67-14.44 12-21.32l3.36-5.1 3.52-5c1.23-1.63 2.41-3.29 3.65-4.91s2.53-3.21 3.82-4.79A185.2 185.2 0 0 1 83.4 67.43a208 208 0 0 1 19-15.66c3.35-2.41 6.74-4.78 10.25-7s7.11-4.28 10.75-6.32c7.29-4 14.73-8 22.53-11.49 3.9-1.72 7.88-3.3 12-4.64a104.22 104.22 0 0 1 12.44-3.23 62.44 62.44 0 0 1 12.78-1.39A25.92 25.92 0 0 1 196 21.44a6.55 6.55 0 0 1 2.05 9 6.66 6.66 0 0 1-1.64 1.78l-.41.29a22.07 22.07 0 0 1-5.78 3 30.42 30.42 0 0 1-5.67 1.62 37.82 37.82 0 0 1-5.69.71c-1 0-1.9.18-2.85.26l-2.85.24q-5.72.51-11.48 1.1c-3.84.4-7.71.82-11.58 1.4a112.34 112.34 0 0 0-22.94 5.61c-3.72 1.35-7.34 3-10.94 4.64s-7.14 3.51-10.6 5.51A151.6 151.6 0 0 0 68.56 87c-1.33 1.48-2.56 3-3.92 4.56s-2.51 3.15-3.75 4.73l-3.54 4.9c-1.13 1.66-2.23 3.35-3.33 5a127 127 0 0 0-10.93 21.49 1.58 1.58 0 1 1-3-1.15s.1-.06.12-.1Z"
            style="fill:#e0684b"
          />
          <path
            d="M0 0h392v392H0z"
            style="fill:none"
          />
        </g>
      </g>
    </svg>
  </span>
   
  <ul
    class="s-VtBGqL4DHYk2"
  >
    <li
      class="s-VtBGqL4DHYk2"
    >
      <svg
        height="129.754"
        id="svg921"
        version="1.1"
        viewBox="0 0 30.266 34.331"
        width="114.392"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs
          id="defs918"
        >
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="translate(-128.802 149.092)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient145395"
            r="11.135"
            xlink:href="#linearGradient6783"
          />
          <lineargradient
            id="linearGradient6783"
          >
            <stop
              id="stop6779"
              offset=".502"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
            <stop
              id="stop6781"
              offset="1"
              style="stop-color:var(--svg-highlight);stop-opacity:0"
            />
          </lineargradient>
        </defs>
        <g
          id="layer9"
          transform="translate(-11.896 -154.779)"
        >
          <g
            id="use6752"
            style="font-variation-settings:normal;fill:#f2f2f2;fill-opacity:1;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000"
            transform="matrix(.48582 0 0 .48348 -6.172 64.35)"
          >
            <rect
              height="54.882"
              id="rect145241"
              ry="4.619"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="39.286"
              x="38.01"
              y="187.855"
            />
            <rect
              height="47.921"
              id="rect145243"
              ry="0"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="32.749"
              x="41.279"
              y="191.335"
            />
          </g>
          <circle
            cx="25.673"
            cy="168.16"
            id="use6754"
            r="10.341"
            style="fill:none;fill-rule:evenodd;stroke:url(#radialGradient145395);stroke-width:5.29167;stroke-dasharray:none;stroke-opacity:1"
          />
          <g
            id="use6750"
            style="display:inline;stroke-width:2.04714"
            transform="matrix(.48799 0 0 .48898 13.79 102.5)"
          >
            <path
              d="M54.208 172.075s2.862-6.029 2.862-13.434c0-11.55-3.753-27.385-3.753-27.385-6.273-5.616-14.818-6.57-14.818-6.57l-5.712-.01s-8.124 1.149-14.275 6.177c0 0-3.487 15.855-3.428 28.149.038 7.869 3.14 12.909 3.14 12.909 18.424 11.63 35.984.164 35.984.164z"
              id="path145313"
              style="font-variation-settings:normal;opacity:1;vector-effect:none;fill:#f2f2f2;fill-opacity:1;stroke:none;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000;stop-opacity:1"
            />
            <path
              d="M54.466 172.145s2.862-6.028 2.862-13.433c0-11.55-3.754-27.385-3.754-27.385-6.273-5.616-14.817-6.57-14.817-6.57l-5.712-.01s-8.124 1.149-14.276 6.177c0 0-3.486 15.855-3.427 28.149.038 7.869 3.14 12.909 3.14 12.909"
              id="path145315"
              style="fill:none;stroke:#000;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            />
            <path
              d="m33.257 46.362-1.579.092s-4.14.77-6.997 3.007l.482 9.718c4.816 1.422 8.119 1.062 8.119 1.062l-.005-2.488c-1.092-.052-1.381-1.286-1.381-1.286l-.069-6.771s.304-1.079 1.4-1.045l.033.001z"
              id="path145317"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:gray;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
            <path
              d="m33.22 46.374 1.578.091s4.14.771 6.997 3.008l-.482 9.717c-4.815 1.423-8.119 1.063-8.119 1.063l.005-2.488c1.092-.052 1.381-1.286 1.381-1.286l.069-6.772s-.304-1.078-1.4-1.044h-.033z"
              id="path145319"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:none;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
            <path
              d="M31.816 49.64s.304-1.08 1.4-1.045c1.095.034 1.39 1.045 1.39 1.045l.068 6.771s-.276 1.323-1.386 1.287c-1.11-.036-1.404-1.287-1.404-1.287z"
              id="path145321"
              style="display:inline;fill:none;fill-rule:evenodd;stroke:#000;stroke-width:.793751;stroke-miterlimit:4;stroke-dasharray:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
          </g>
        </g>
      </svg>
      
      <!--&lt;HelpButton1&gt;-->
       
      <p
        class="s-VtBGqL4DHYk2"
      >
        Pivoter
      </p>
    </li>
     
    <li
      class="s-VtBGqL4DHYk2"
    >
      <svg
        height="129.754"
        id="svg921"
        version="1.1"
        viewBox="0 0 30.266 34.331"
        width="114.392"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs
          id="defs918"
        >
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="matrix(.59784 0 0 .59657 62.265 35.28)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient142022"
            r="11.135"
            xlink:href="#linearGradient16838"
          />
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="matrix(.59784 0 0 .59657 62.265 35.28)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient142024"
            r="11.135"
            xlink:href="#linearGradient16838"
          />
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="matrix(.59784 0 0 .59657 62.265 35.28)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient142026"
            r="11.135"
            xlink:href="#linearGradient16838"
          />
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="translate(64.308 147.812)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient142048"
            r="11.135"
            xlink:href="#linearGradient6783"
          />
          <lineargradient
            id="linearGradient16838"
          >
            <stop
              id="stop16834"
              offset=".502"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
            <stop
              id="stop16836"
              offset="1"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
          </lineargradient>
          <lineargradient
            id="linearGradient6783"
          >
            <stop
              id="stop6779"
              offset=".502"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
            <stop
              id="stop6781"
              offset="1"
              style="stop-color:var(--svg-highlight);stop-opacity:0"
            />
          </lineargradient>
        </defs>
        <g
          id="layer5"
          transform="translate(-205.005 -153.499)"
        >
          <g
            id="use73978"
            style="font-variation-settings:normal;fill:#f2f2f2;fill-opacity:1;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000"
            transform="matrix(.48582 0 0 .48348 186.937 63.07)"
          >
            <rect
              height="54.882"
              id="rect142040"
              ry="4.619"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="39.286"
              x="38.01"
              y="187.855"
            />
            <rect
              height="47.921"
              id="rect142042"
              ry="0"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="32.749"
              x="41.279"
              y="191.335"
            />
          </g>
          <circle
            cx="218.782"
            cy="166.88"
            id="use73980"
            r="10.341"
            style="fill:none;fill-rule:evenodd;stroke:url(#radialGradient142048);stroke-width:5.29167;stroke-dasharray:none;stroke-opacity:1"
          />
          <g
            id="use73982"
            style="display:inline;stroke-width:2.04714"
            transform="matrix(.48799 0 0 .48898 206.9 101.22)"
          >
            <path
              d="M54.208 172.075s2.862-6.029 2.862-13.434c0-11.55-3.753-27.385-3.753-27.385-6.273-5.616-14.818-6.57-14.818-6.57l-5.712-.01s-8.124 1.149-14.275 6.177c0 0-3.487 15.855-3.428 28.149.038 7.869 3.14 12.909 3.14 12.909 18.424 11.63 35.984.164 35.984.164z"
              id="path142050"
              style="font-variation-settings:normal;opacity:1;vector-effect:none;fill:#f2f2f2;fill-opacity:1;stroke:none;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000;stop-opacity:1"
            />
            <path
              d="M54.466 172.145s2.862-6.028 2.862-13.433c0-11.55-3.754-27.385-3.754-27.385-6.273-5.616-14.817-6.57-14.817-6.57l-5.712-.01s-8.124 1.149-14.276 6.177c0 0-3.486 15.855-3.427 28.149.038 7.869 3.14 12.909 3.14 12.909"
              id="path142052"
              style="fill:none;stroke:#000;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            />
            <path
              d="m33.257 46.362-1.579.092s-4.14.77-6.997 3.007l.482 9.718c4.816 1.422 8.119 1.062 8.119 1.062l-.005-2.488c-1.092-.052-1.381-1.286-1.381-1.286l-.069-6.771s.304-1.079 1.4-1.045l.033.001z"
              id="path142054"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:gray;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
            <path
              d="m33.22 46.374 1.578.091s4.14.771 6.997 3.008l-.482 9.717c-4.815 1.423-8.119 1.063-8.119 1.063l.005-2.488c1.092-.052 1.381-1.286 1.381-1.286l.069-6.772s-.304-1.078-1.4-1.044h-.033z"
              id="path142056"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:none;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
            <path
              d="M31.816 49.64s.304-1.08 1.4-1.045c1.095.034 1.39 1.045 1.39 1.045l.068 6.771s-.276 1.323-1.386 1.287c-1.11-.036-1.404-1.287-1.404-1.287z"
              id="path142058"
              style="display:inline;fill:none;fill-rule:evenodd;stroke:#000;stroke-width:.793751;stroke-miterlimit:4;stroke-dasharray:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
          </g>
          <g
            aria-label="1s"
            id="use73988"
            style="font-size:10.5833px;line-height:1.25;font-family:\\"carter one\\";-inkscape-font-specification:\\"carter one\\";fill:url(#radialGradient142026);stroke-width:.264583"
            transform="translate(71.208 107.105)"
          >
            <path
              d="M157.402 47.375s.057-.17.275-.18c.563-.134 1.124-.272 1.688-.403.263-.042.178.285.18.448-.11 2.302-.214 4.604-.327 6.906.016.245-.207.353-.412.391-.503.144-1.002.303-1.507.437-.397.049-.258-.442-.26-.679.053-1.33.14-2.328.19-3.657.006-.45-1.004-.07-1.26-.096-.257-.026-.38-.418-.18-.64 0 0 1.213-2.052 1.613-2.527z"
              id="path142016"
              style="fill:url(#radialGradient142022)"
            />
            <path
              d="M160.378 53.474c.08-.223.316.152.46.19.371.224.888.308 1.263.054.262-.25-.04-.582-.287-.699-.427-.33-.957-.578-1.23-1.067-.21-.384-.222-.842-.182-1.268.136-.69.75-1.186 1.387-1.406.687-.252 1.535-.192 2.098.31.035.443.043.89.065 1.333-.162.23-.362-.203-.534-.271-.333-.262-.825-.402-1.212-.174-.208.144-.184.456-.077.655.156.185.383.289.575.433.46.32.992.602 1.24 1.132.254.594.09 1.325-.378 1.768-.531.52-1.308.72-2.035.702a2.492 2.492 0 0 1-1.086-.281l-.067-1.411z"
              id="path142018"
              style="fill:url(#radialGradient142024)"
            />
          </g>
        </g>
      </svg>
      
      <!--&lt;HelpButton2&gt;-->
       
      <p
        class="s-VtBGqL4DHYk2"
      >
        Piocher dans votre main
      </p>
    </li>
     
    <li
      class="s-VtBGqL4DHYk2"
    >
      <svg
        height="129.754"
        id="svg921"
        version="1.1"
        viewBox="0 0 30.021 34.331"
        width="113.466"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs
          id="defs918"
        >
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="translate(-85.59 148.475)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient129962"
            r="11.135"
            xlink:href="#linearGradient6783"
          />
          <lineargradient
            id="linearGradient6783"
          >
            <stop
              id="stop6779"
              offset=".502"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
            <stop
              id="stop6781"
              offset="1"
              style="stop-color:var(--svg-highlight);stop-opacity:0"
            />
          </lineargradient>
        </defs>
        <g
          id="layer11"
          transform="translate(-51.851 -154.556)"
        >
          <g
            id="use6837"
            style="font-variation-settings:normal;fill:#f2f2f2;fill-opacity:1;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000"
            transform="matrix(.48582 0 0 .48348 43.923 64.128)"
          >
            <rect
              height="54.882"
              id="rect129812"
              ry="4.619"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="39.286"
              x="38.01"
              y="187.855"
            />
            <rect
              height="47.921"
              id="rect129814"
              ry="0"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="32.749"
              x="41.279"
              y="191.335"
            />
          </g>
          <circle
            cx="68.885"
            cy="167.543"
            id="use6839"
            r="10.341"
            style="fill:none;fill-rule:evenodd;stroke:url(#radialGradient129962);stroke-width:5.29167;stroke-dasharray:none;stroke-opacity:1"
          />
          <g
            id="use6841"
            style="display:inline;stroke-width:2.04714"
            transform="matrix(.48799 0 0 .48898 49.021 105.97)"
          >
            <path
              d="M45.479 164.523s2.862-6.028 2.862-13.433c0-11.55-3.754-27.386-3.754-27.386-6.273-5.615-14.817-6.569-14.817-6.569l-5.712-.01s-8.124 1.149-14.276 6.177c0 0-3.486 15.855-3.427 28.149.038 7.868 3.14 12.909 3.14 12.909 18.424 11.63 35.984.163 35.984.163z"
              id="path129932"
              style="font-variation-settings:normal;opacity:1;vector-effect:none;fill:#f2f2f2;fill-opacity:1;stroke:none;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000;stop-opacity:1"
            />
            <path
              d="M45.736 164.594s2.862-6.028 2.862-13.433c0-11.55-3.753-27.386-3.753-27.386-6.273-5.615-14.818-6.57-14.818-6.57l-5.712-.01s-8.124 1.15-14.275 6.178c0 0-3.487 15.855-3.428 28.149.038 7.868 3.14 12.909 3.14 12.909"
              id="path129934"
              style="fill:none;stroke:#000;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            />
            <path
              d="m33.257 46.362-1.579.092s-4.14.77-6.997 3.007l.482 9.718c4.816 1.422 8.119 1.062 8.119 1.062l-.005-2.488c-1.092-.052-1.381-1.286-1.381-1.286l-.069-6.771s.304-1.079 1.4-1.045l.033.001z"
              id="path129936"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:none;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -40.685 22.47)"
            />
            <path
              d="m33.22 46.374 1.578.091s4.14.771 6.997 3.008l-.482 9.717c-4.815 1.423-8.119 1.063-8.119 1.063l.005-2.488c1.092-.052 1.381-1.286 1.381-1.286l.069-6.772s-.304-1.078-1.4-1.044h-.033z"
              id="path129938"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:gray;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -40.685 22.47)"
            />
            <path
              d="M31.816 49.64s.304-1.08 1.4-1.045c1.095.034 1.39 1.045 1.39 1.045l.068 6.771s-.276 1.323-1.386 1.287c-1.11-.036-1.404-1.287-1.404-1.287z"
              id="path129940"
              style="display:inline;fill:none;fill-rule:evenodd;stroke:#000;stroke-width:.793751;stroke-miterlimit:4;stroke-dasharray:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -40.685 22.47)"
            />
          </g>
        </g>
      </svg>
      
      <!--&lt;HelpButton3&gt;-->
       
      <p
        class="s-VtBGqL4DHYk2"
      >
        Ouvrir le menu d'actions
      </p>
    </li>
  </ul>
</div>
`;

exports[`Default actions 1`] = `
<div
  class="overlay s-VtBGqL4DHYk2"
>
  <span
    class="s-VtBGqL4DHYk2"
  >
    <svg
      height="185"
      viewBox="0 0 180.17 208.04"
      width="160"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <style>
          .cls-3{fill:#bb464b}
        </style>
      </defs>
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          data-name="Page Elements"
          id="Page_Elements"
        >
          <path
            d="M90.09 0 0 52v104l90.09 52 90.08-52V52Z"
            style="fill:#fff"
          />
          <path
            d="m180.17 52.01-28.2-16.28-27.12 15.66 28.2 16.28 27.12-15.66zM27.12 67.67l90.09-52.01L90.08 0 0 52.01l27.12 15.66zm34.77 52.63 28.19 16.28 28.2-16.28-28.2-16.28-28.19 16.28z"
            style="fill:#e0684b"
          />
          <path
            class="cls-3"
            d="M153.05 67.67v72.7l-62.97 36.35-62.96-36.35v-72.7L0 52.01v104.02l90.08 52.01 90.09-52.01V52.01l-27.12 15.66z"
          />
          <path
            class="cls-3"
            d="M90.08 71.46 61.89 87.74v32.56l28.19-16.28 28.2 16.28V87.74l-28.2-16.28z"
          />
          <path
            d="m153.05 67.67-34.77 20.07v32.56l-28.2 16.28v40.14l62.97-36.35v-72.7z"
            style="fill:#e0ded8"
          />
          <path
            d="m27.12 67.67 34.77 20.07v32.56l28.19 16.28v40.14l-62.96-36.35v-72.7z"
            style="fill:#d5d2ca"
          />
        </g>
      </g>
    </svg>
     
    <svg
      height="300"
      viewBox="0 0 392 392"
      width="300"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          id="Spinner"
        >
          <path
            d="M40.21 126.43c3.7-7.31 7.67-14.44 12-21.32l3.36-5.1 3.52-5c1.23-1.63 2.41-3.29 3.65-4.91s2.53-3.21 3.82-4.79A185.2 185.2 0 0 1 83.4 67.43a208 208 0 0 1 19-15.66c3.35-2.41 6.74-4.78 10.25-7s7.11-4.28 10.75-6.32c7.29-4 14.73-8 22.53-11.49 3.9-1.72 7.88-3.3 12-4.64a104.22 104.22 0 0 1 12.44-3.23 62.44 62.44 0 0 1 12.78-1.39A25.92 25.92 0 0 1 196 21.44a6.55 6.55 0 0 1 2.05 9 6.66 6.66 0 0 1-1.64 1.78l-.41.29a22.07 22.07 0 0 1-5.78 3 30.42 30.42 0 0 1-5.67 1.62 37.82 37.82 0 0 1-5.69.71c-1 0-1.9.18-2.85.26l-2.85.24q-5.72.51-11.48 1.1c-3.84.4-7.71.82-11.58 1.4a112.34 112.34 0 0 0-22.94 5.61c-3.72 1.35-7.34 3-10.94 4.64s-7.14 3.51-10.6 5.51A151.6 151.6 0 0 0 68.56 87c-1.33 1.48-2.56 3-3.92 4.56s-2.51 3.15-3.75 4.73l-3.54 4.9c-1.13 1.66-2.23 3.35-3.33 5a127 127 0 0 0-10.93 21.49 1.58 1.58 0 1 1-3-1.15s.1-.06.12-.1Z"
            style="fill:#e0684b"
          />
          <path
            d="M0 0h392v392H0z"
            style="fill:none"
          />
        </g>
      </g>
    </svg>
  </span>
   
  <ul
    class="s-VtBGqL4DHYk2"
  >
    <li
      class="s-VtBGqL4DHYk2"
    >
      <svg
        height="129.754"
        id="svg921"
        version="1.1"
        viewBox="0 0 30.266 34.331"
        width="114.392"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs
          id="defs918"
        >
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="translate(-128.802 149.092)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient145395"
            r="11.135"
            xlink:href="#linearGradient6783"
          />
          <lineargradient
            id="linearGradient6783"
          >
            <stop
              id="stop6779"
              offset=".502"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
            <stop
              id="stop6781"
              offset="1"
              style="stop-color:var(--svg-highlight);stop-opacity:0"
            />
          </lineargradient>
        </defs>
        <g
          id="layer9"
          transform="translate(-11.896 -154.779)"
        >
          <g
            id="use6752"
            style="font-variation-settings:normal;fill:#f2f2f2;fill-opacity:1;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000"
            transform="matrix(.48582 0 0 .48348 -6.172 64.35)"
          >
            <rect
              height="54.882"
              id="rect145241"
              ry="4.619"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="39.286"
              x="38.01"
              y="187.855"
            />
            <rect
              height="47.921"
              id="rect145243"
              ry="0"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="32.749"
              x="41.279"
              y="191.335"
            />
          </g>
          <circle
            cx="25.673"
            cy="168.16"
            id="use6754"
            r="10.341"
            style="fill:none;fill-rule:evenodd;stroke:url(#radialGradient145395);stroke-width:5.29167;stroke-dasharray:none;stroke-opacity:1"
          />
          <g
            id="use6750"
            style="display:inline;stroke-width:2.04714"
            transform="matrix(.48799 0 0 .48898 13.79 102.5)"
          >
            <path
              d="M54.208 172.075s2.862-6.029 2.862-13.434c0-11.55-3.753-27.385-3.753-27.385-6.273-5.616-14.818-6.57-14.818-6.57l-5.712-.01s-8.124 1.149-14.275 6.177c0 0-3.487 15.855-3.428 28.149.038 7.869 3.14 12.909 3.14 12.909 18.424 11.63 35.984.164 35.984.164z"
              id="path145313"
              style="font-variation-settings:normal;opacity:1;vector-effect:none;fill:#f2f2f2;fill-opacity:1;stroke:none;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000;stop-opacity:1"
            />
            <path
              d="M54.466 172.145s2.862-6.028 2.862-13.433c0-11.55-3.754-27.385-3.754-27.385-6.273-5.616-14.817-6.57-14.817-6.57l-5.712-.01s-8.124 1.149-14.276 6.177c0 0-3.486 15.855-3.427 28.149.038 7.869 3.14 12.909 3.14 12.909"
              id="path145315"
              style="fill:none;stroke:#000;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            />
            <path
              d="m33.257 46.362-1.579.092s-4.14.77-6.997 3.007l.482 9.718c4.816 1.422 8.119 1.062 8.119 1.062l-.005-2.488c-1.092-.052-1.381-1.286-1.381-1.286l-.069-6.771s.304-1.079 1.4-1.045l.033.001z"
              id="path145317"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:gray;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
            <path
              d="m33.22 46.374 1.578.091s4.14.771 6.997 3.008l-.482 9.717c-4.815 1.423-8.119 1.063-8.119 1.063l.005-2.488c1.092-.052 1.381-1.286 1.381-1.286l.069-6.772s-.304-1.078-1.4-1.044h-.033z"
              id="path145319"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:none;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
            <path
              d="M31.816 49.64s.304-1.08 1.4-1.045c1.095.034 1.39 1.045 1.39 1.045l.068 6.771s-.276 1.323-1.386 1.287c-1.11-.036-1.404-1.287-1.404-1.287z"
              id="path145321"
              style="display:inline;fill:none;fill-rule:evenodd;stroke:#000;stroke-width:.793751;stroke-miterlimit:4;stroke-dasharray:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
          </g>
        </g>
      </svg>
      
      <!--&lt;HelpButton1&gt;-->
       
      <p
        class="s-VtBGqL4DHYk2"
      >
        Retourner
        <br />
        Jeter le(s) dé(s)
      </p>
    </li>
     
    <li
      class="s-VtBGqL4DHYk2"
    >
      <svg
        height="129.754"
        id="svg921"
        version="1.1"
        viewBox="0 0 30.266 34.331"
        width="114.392"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs
          id="defs918"
        >
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="matrix(.59784 0 0 .59657 62.265 35.28)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient142022"
            r="11.135"
            xlink:href="#linearGradient16838"
          />
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="matrix(.59784 0 0 .59657 62.265 35.28)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient142024"
            r="11.135"
            xlink:href="#linearGradient16838"
          />
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="matrix(.59784 0 0 .59657 62.265 35.28)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient142026"
            r="11.135"
            xlink:href="#linearGradient16838"
          />
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="translate(64.308 147.812)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient142048"
            r="11.135"
            xlink:href="#linearGradient6783"
          />
          <lineargradient
            id="linearGradient16838"
          >
            <stop
              id="stop16834"
              offset=".502"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
            <stop
              id="stop16836"
              offset="1"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
          </lineargradient>
          <lineargradient
            id="linearGradient6783"
          >
            <stop
              id="stop6779"
              offset=".502"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
            <stop
              id="stop6781"
              offset="1"
              style="stop-color:var(--svg-highlight);stop-opacity:0"
            />
          </lineargradient>
        </defs>
        <g
          id="layer5"
          transform="translate(-205.005 -153.499)"
        >
          <g
            id="use73978"
            style="font-variation-settings:normal;fill:#f2f2f2;fill-opacity:1;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000"
            transform="matrix(.48582 0 0 .48348 186.937 63.07)"
          >
            <rect
              height="54.882"
              id="rect142040"
              ry="4.619"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="39.286"
              x="38.01"
              y="187.855"
            />
            <rect
              height="47.921"
              id="rect142042"
              ry="0"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="32.749"
              x="41.279"
              y="191.335"
            />
          </g>
          <circle
            cx="218.782"
            cy="166.88"
            id="use73980"
            r="10.341"
            style="fill:none;fill-rule:evenodd;stroke:url(#radialGradient142048);stroke-width:5.29167;stroke-dasharray:none;stroke-opacity:1"
          />
          <g
            id="use73982"
            style="display:inline;stroke-width:2.04714"
            transform="matrix(.48799 0 0 .48898 206.9 101.22)"
          >
            <path
              d="M54.208 172.075s2.862-6.029 2.862-13.434c0-11.55-3.753-27.385-3.753-27.385-6.273-5.616-14.818-6.57-14.818-6.57l-5.712-.01s-8.124 1.149-14.275 6.177c0 0-3.487 15.855-3.428 28.149.038 7.869 3.14 12.909 3.14 12.909 18.424 11.63 35.984.164 35.984.164z"
              id="path142050"
              style="font-variation-settings:normal;opacity:1;vector-effect:none;fill:#f2f2f2;fill-opacity:1;stroke:none;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000;stop-opacity:1"
            />
            <path
              d="M54.466 172.145s2.862-6.028 2.862-13.433c0-11.55-3.754-27.385-3.754-27.385-6.273-5.616-14.817-6.57-14.817-6.57l-5.712-.01s-8.124 1.149-14.276 6.177c0 0-3.486 15.855-3.427 28.149.038 7.869 3.14 12.909 3.14 12.909"
              id="path142052"
              style="fill:none;stroke:#000;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            />
            <path
              d="m33.257 46.362-1.579.092s-4.14.77-6.997 3.007l.482 9.718c4.816 1.422 8.119 1.062 8.119 1.062l-.005-2.488c-1.092-.052-1.381-1.286-1.381-1.286l-.069-6.771s.304-1.079 1.4-1.045l.033.001z"
              id="path142054"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:gray;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
            <path
              d="m33.22 46.374 1.578.091s4.14.771 6.997 3.008l-.482 9.717c-4.815 1.423-8.119 1.063-8.119 1.063l.005-2.488c1.092-.052 1.381-1.286 1.381-1.286l.069-6.772s-.304-1.078-1.4-1.044h-.033z"
              id="path142056"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:none;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
            <path
              d="M31.816 49.64s.304-1.08 1.4-1.045c1.095.034 1.39 1.045 1.39 1.045l.068 6.771s-.276 1.323-1.386 1.287c-1.11-.036-1.404-1.287-1.404-1.287z"
              id="path142058"
              style="display:inline;fill:none;fill-rule:evenodd;stroke:#000;stroke-width:.793751;stroke-miterlimit:4;stroke-dasharray:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -31.956 30.022)"
            />
          </g>
          <g
            aria-label="1s"
            id="use73988"
            style="font-size:10.5833px;line-height:1.25;font-family:\\"carter one\\";-inkscape-font-specification:\\"carter one\\";fill:url(#radialGradient142026);stroke-width:.264583"
            transform="translate(71.208 107.105)"
          >
            <path
              d="M157.402 47.375s.057-.17.275-.18c.563-.134 1.124-.272 1.688-.403.263-.042.178.285.18.448-.11 2.302-.214 4.604-.327 6.906.016.245-.207.353-.412.391-.503.144-1.002.303-1.507.437-.397.049-.258-.442-.26-.679.053-1.33.14-2.328.19-3.657.006-.45-1.004-.07-1.26-.096-.257-.026-.38-.418-.18-.64 0 0 1.213-2.052 1.613-2.527z"
              id="path142016"
              style="fill:url(#radialGradient142022)"
            />
            <path
              d="M160.378 53.474c.08-.223.316.152.46.19.371.224.888.308 1.263.054.262-.25-.04-.582-.287-.699-.427-.33-.957-.578-1.23-1.067-.21-.384-.222-.842-.182-1.268.136-.69.75-1.186 1.387-1.406.687-.252 1.535-.192 2.098.31.035.443.043.89.065 1.333-.162.23-.362-.203-.534-.271-.333-.262-.825-.402-1.212-.174-.208.144-.184.456-.077.655.156.185.383.289.575.433.46.32.992.602 1.24 1.132.254.594.09 1.325-.378 1.768-.531.52-1.308.72-2.035.702a2.492 2.492 0 0 1-1.086-.281l-.067-1.411z"
              id="path142018"
              style="fill:url(#radialGradient142024)"
            />
          </g>
        </g>
      </svg>
      
      <!--&lt;HelpButton2&gt;-->
       
      <p
        class="s-VtBGqL4DHYk2"
      >
        Pivoter
      </p>
    </li>
     
    <li
      class="s-VtBGqL4DHYk2"
    >
      <svg
        height="129.754"
        id="svg921"
        version="1.1"
        viewBox="0 0 30.021 34.331"
        width="113.466"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs
          id="defs918"
        >
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="translate(-85.59 148.475)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient129962"
            r="11.135"
            xlink:href="#linearGradient6783"
          />
          <lineargradient
            id="linearGradient6783"
          >
            <stop
              id="stop6779"
              offset=".502"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
            <stop
              id="stop6781"
              offset="1"
              style="stop-color:var(--svg-highlight);stop-opacity:0"
            />
          </lineargradient>
        </defs>
        <g
          id="layer11"
          transform="translate(-51.851 -154.556)"
        >
          <g
            id="use6837"
            style="font-variation-settings:normal;fill:#f2f2f2;fill-opacity:1;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000"
            transform="matrix(.48582 0 0 .48348 43.923 64.128)"
          >
            <rect
              height="54.882"
              id="rect129812"
              ry="4.619"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="39.286"
              x="38.01"
              y="187.855"
            />
            <rect
              height="47.921"
              id="rect129814"
              ry="0"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="32.749"
              x="41.279"
              y="191.335"
            />
          </g>
          <circle
            cx="68.885"
            cy="167.543"
            id="use6839"
            r="10.341"
            style="fill:none;fill-rule:evenodd;stroke:url(#radialGradient129962);stroke-width:5.29167;stroke-dasharray:none;stroke-opacity:1"
          />
          <g
            id="use6841"
            style="display:inline;stroke-width:2.04714"
            transform="matrix(.48799 0 0 .48898 49.021 105.97)"
          >
            <path
              d="M45.479 164.523s2.862-6.028 2.862-13.433c0-11.55-3.754-27.386-3.754-27.386-6.273-5.615-14.817-6.569-14.817-6.569l-5.712-.01s-8.124 1.149-14.276 6.177c0 0-3.486 15.855-3.427 28.149.038 7.868 3.14 12.909 3.14 12.909 18.424 11.63 35.984.163 35.984.163z"
              id="path129932"
              style="font-variation-settings:normal;opacity:1;vector-effect:none;fill:#f2f2f2;fill-opacity:1;stroke:none;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000;stop-opacity:1"
            />
            <path
              d="M45.736 164.594s2.862-6.028 2.862-13.433c0-11.55-3.753-27.386-3.753-27.386-6.273-5.615-14.818-6.57-14.818-6.57l-5.712-.01s-8.124 1.15-14.275 6.178c0 0-3.487 15.855-3.428 28.149.038 7.868 3.14 12.909 3.14 12.909"
              id="path129934"
              style="fill:none;stroke:#000;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            />
            <path
              d="m33.257 46.362-1.579.092s-4.14.77-6.997 3.007l.482 9.718c4.816 1.422 8.119 1.062 8.119 1.062l-.005-2.488c-1.092-.052-1.381-1.286-1.381-1.286l-.069-6.771s.304-1.079 1.4-1.045l.033.001z"
              id="path129936"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:none;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -40.685 22.47)"
            />
            <path
              d="m33.22 46.374 1.578.091s4.14.771 6.997 3.008l-.482 9.717c-4.815 1.423-8.119 1.063-8.119 1.063l.005-2.488c1.092-.052 1.381-1.286 1.381-1.286l.069-6.772s-.304-1.078-1.4-1.044h-.033z"
              id="path129938"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:gray;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -40.685 22.47)"
            />
            <path
              d="M31.816 49.64s.304-1.08 1.4-1.045c1.095.034 1.39 1.045 1.39 1.045l.068 6.771s-.276 1.323-1.386 1.287c-1.11-.036-1.404-1.287-1.404-1.287z"
              id="path129940"
              style="display:inline;fill:none;fill-rule:evenodd;stroke:#000;stroke-width:.793751;stroke-miterlimit:4;stroke-dasharray:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -40.685 22.47)"
            />
          </g>
        </g>
      </svg>
      
      <!--&lt;HelpButton3&gt;-->
       
      <p
        class="s-VtBGqL4DHYk2"
      >
        Ouvrir le menu d'actions
      </p>
    </li>
  </ul>
</div>
`;

exports[`No actions 1`] = `
<div
  class="overlay s-VtBGqL4DHYk2"
>
  <span
    class="s-VtBGqL4DHYk2"
  >
    <svg
      height="185"
      viewBox="0 0 180.17 208.04"
      width="160"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <style>
          .cls-3{fill:#bb464b}
        </style>
      </defs>
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          data-name="Page Elements"
          id="Page_Elements"
        >
          <path
            d="M90.09 0 0 52v104l90.09 52 90.08-52V52Z"
            style="fill:#fff"
          />
          <path
            d="m180.17 52.01-28.2-16.28-27.12 15.66 28.2 16.28 27.12-15.66zM27.12 67.67l90.09-52.01L90.08 0 0 52.01l27.12 15.66zm34.77 52.63 28.19 16.28 28.2-16.28-28.2-16.28-28.19 16.28z"
            style="fill:#e0684b"
          />
          <path
            class="cls-3"
            d="M153.05 67.67v72.7l-62.97 36.35-62.96-36.35v-72.7L0 52.01v104.02l90.08 52.01 90.09-52.01V52.01l-27.12 15.66z"
          />
          <path
            class="cls-3"
            d="M90.08 71.46 61.89 87.74v32.56l28.19-16.28 28.2 16.28V87.74l-28.2-16.28z"
          />
          <path
            d="m153.05 67.67-34.77 20.07v32.56l-28.2 16.28v40.14l62.97-36.35v-72.7z"
            style="fill:#e0ded8"
          />
          <path
            d="m27.12 67.67 34.77 20.07v32.56l28.19 16.28v40.14l-62.96-36.35v-72.7z"
            style="fill:#d5d2ca"
          />
        </g>
      </g>
    </svg>
     
    <svg
      height="300"
      viewBox="0 0 392 392"
      width="300"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          id="Spinner"
        >
          <path
            d="M40.21 126.43c3.7-7.31 7.67-14.44 12-21.32l3.36-5.1 3.52-5c1.23-1.63 2.41-3.29 3.65-4.91s2.53-3.21 3.82-4.79A185.2 185.2 0 0 1 83.4 67.43a208 208 0 0 1 19-15.66c3.35-2.41 6.74-4.78 10.25-7s7.11-4.28 10.75-6.32c7.29-4 14.73-8 22.53-11.49 3.9-1.72 7.88-3.3 12-4.64a104.22 104.22 0 0 1 12.44-3.23 62.44 62.44 0 0 1 12.78-1.39A25.92 25.92 0 0 1 196 21.44a6.55 6.55 0 0 1 2.05 9 6.66 6.66 0 0 1-1.64 1.78l-.41.29a22.07 22.07 0 0 1-5.78 3 30.42 30.42 0 0 1-5.67 1.62 37.82 37.82 0 0 1-5.69.71c-1 0-1.9.18-2.85.26l-2.85.24q-5.72.51-11.48 1.1c-3.84.4-7.71.82-11.58 1.4a112.34 112.34 0 0 0-22.94 5.61c-3.72 1.35-7.34 3-10.94 4.64s-7.14 3.51-10.6 5.51A151.6 151.6 0 0 0 68.56 87c-1.33 1.48-2.56 3-3.92 4.56s-2.51 3.15-3.75 4.73l-3.54 4.9c-1.13 1.66-2.23 3.35-3.33 5a127 127 0 0 0-10.93 21.49 1.58 1.58 0 1 1-3-1.15s.1-.06.12-.1Z"
            style="fill:#e0684b"
          />
          <path
            d="M0 0h392v392H0z"
            style="fill:none"
          />
        </g>
      </g>
    </svg>
  </span>
   
  <ul
    class="s-VtBGqL4DHYk2"
  >
     
     
    <li
      class="s-VtBGqL4DHYk2"
    >
      <svg
        height="129.754"
        id="svg921"
        version="1.1"
        viewBox="0 0 30.021 34.331"
        width="113.466"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs
          id="defs918"
        >
          <radialgradient
            cx="154.474"
            cy="19.068"
            fx="154.474"
            fy="19.068"
            gradientTransform="translate(-85.59 148.475)"
            gradientUnits="userSpaceOnUse"
            id="radialGradient129962"
            r="11.135"
            xlink:href="#linearGradient6783"
          />
          <lineargradient
            id="linearGradient6783"
          >
            <stop
              id="stop6779"
              offset=".502"
              style="stop-color:var(--svg-highlight);stop-opacity:1"
            />
            <stop
              id="stop6781"
              offset="1"
              style="stop-color:var(--svg-highlight);stop-opacity:0"
            />
          </lineargradient>
        </defs>
        <g
          id="layer11"
          transform="translate(-51.851 -154.556)"
        >
          <g
            id="use6837"
            style="font-variation-settings:normal;fill:#f2f2f2;fill-opacity:1;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000"
            transform="matrix(.48582 0 0 .48348 43.923 64.128)"
          >
            <rect
              height="54.882"
              id="rect129812"
              ry="4.619"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="39.286"
              x="38.01"
              y="187.855"
            />
            <rect
              height="47.921"
              id="rect129814"
              ry="0"
              style="font-variation-settings:normal;opacity:1;fill:#f2f2f2;fill-opacity:1;fill-rule:evenodd;stroke:#000;stroke-width:1.63779;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000;stop-opacity:1"
              width="32.749"
              x="41.279"
              y="191.335"
            />
          </g>
          <circle
            cx="68.885"
            cy="167.543"
            id="use6839"
            r="10.341"
            style="fill:none;fill-rule:evenodd;stroke:url(#radialGradient129962);stroke-width:5.29167;stroke-dasharray:none;stroke-opacity:1"
          />
          <g
            id="use6841"
            style="display:inline;stroke-width:2.04714"
            transform="matrix(.48799 0 0 .48898 49.021 105.97)"
          >
            <path
              d="M45.479 164.523s2.862-6.028 2.862-13.433c0-11.55-3.754-27.386-3.754-27.386-6.273-5.615-14.817-6.569-14.817-6.569l-5.712-.01s-8.124 1.149-14.276 6.177c0 0-3.486 15.855-3.427 28.149.038 7.868 3.14 12.909 3.14 12.909 18.424 11.63 35.984.163 35.984.163z"
              id="path129932"
              style="font-variation-settings:normal;opacity:1;vector-effect:none;fill:#f2f2f2;fill-opacity:1;stroke:none;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000;stop-opacity:1"
            />
            <path
              d="M45.736 164.594s2.862-6.028 2.862-13.433c0-11.55-3.753-27.386-3.753-27.386-6.273-5.615-14.818-6.57-14.818-6.57l-5.712-.01s-8.124 1.15-14.275 6.178c0 0-3.487 15.855-3.428 28.149.038 7.868 3.14 12.909 3.14 12.909"
              id="path129934"
              style="fill:none;stroke:#000;stroke-width:1.62492;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            />
            <path
              d="m33.257 46.362-1.579.092s-4.14.77-6.997 3.007l.482 9.718c4.816 1.422 8.119 1.062 8.119 1.062l-.005-2.488c-1.092-.052-1.381-1.286-1.381-1.286l-.069-6.771s.304-1.079 1.4-1.045l.033.001z"
              id="path129936"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:none;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -40.685 22.47)"
            />
            <path
              d="m33.22 46.374 1.578.091s4.14.771 6.997 3.008l-.482 9.717c-4.815 1.423-8.119 1.063-8.119 1.063l.005-2.488c1.092-.052 1.381-1.286 1.381-1.286l.069-6.772s-.304-1.078-1.4-1.044h-.033z"
              id="path129938"
              style="font-variation-settings:normal;display:inline;vector-effect:none;fill:gray;fill-opacity:1;stroke:#000;stroke-width:.793751;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;-inkscape-stroke:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -40.685 22.47)"
            />
            <path
              d="M31.816 49.64s.304-1.08 1.4-1.045c1.095.034 1.39 1.045 1.39 1.045l.068 6.771s-.276 1.323-1.386 1.287c-1.11-.036-1.404-1.287-1.404-1.287z"
              id="path129940"
              style="display:inline;fill:none;fill-rule:evenodd;stroke:#000;stroke-width:.793751;stroke-miterlimit:4;stroke-dasharray:none;stop-color:#000"
              transform="matrix(2.04923 0 0 2.04505 -40.685 22.47)"
            />
          </g>
        </g>
      </svg>
      
      <!--&lt;HelpButton3&gt;-->
       
      <p
        class="s-VtBGqL4DHYk2"
      >
        Ouvrir le menu d'actions
      </p>
    </li>
  </ul>
</div>
`;
